services/image_convert_to_jpeg/kubernetes/image-convert-to-jpeg.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: image-convert-to-jpeg-stateful
  labels:
    app: image-convert-to-jpeg
spec:
  serviceName: image-convert-to-jpeg
  replicas: 1
  selector:
    matchLabels:
      app: image-convert-to-jpeg
  template:
    metadata:
      labels:
        app: image-convert-to-jpeg
    spec:
      containers:
      - name: image-convert-to-jpeg
        image: ghcr.io/csia-pme/csia-pme-image-convert-to-jpeg:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
