services/image_convert_to_jpeg/kubernetes/image-convert-to-jpeg.service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-convert-to-jpeg-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8989
      targetPort: 80
      protocol: TCP
  selector:
    app: image-convert-to-jpeg
